codec-13-generated-mutants-full/string-utils/aux.log
/mnt/c/Users/localadmin/repos/codec/codec_13/generated-mutants-full/string-utils/99/StringUtils.java:80: error: cannot find symbol
        return CharSequenceUtils.regionMatches(string, false, 0, cs2, 0, Math.max(cs1.length(), cs2.length()));
                                               ^
  symbol:   variable string
  location: class StringUtils
Note: /mnt/c/Users/localadmin/repos/codec/codec_13/generated-mutants-full/string-utils/99/StringUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
